fix of overflow issue

--- a/src/content/aboutComicsFriends/aboutComicsFriends.css
+++ b/src/content/aboutComicsFriends/aboutComicsFriends.css
@@ -55,7 +55,8 @@ text-align: justify;
     margin-left:25%;
 }
 
-.anim3D2::after {
+
+/* .anim3D2::after {
         content: "";
         height: 100vh;
         position: absolute;
@@ -65,7 +66,7 @@ text-align: justify;
         background: linear-gradient(180deg,
             rgba(129, 129, 129, 0) 20%,
             rgb(218, 218, 218) 100%);
-}
+} */
 
 .section1bis::before {
     content: "";
